default/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flasksvc
  namespace: default
spec:
  type: LoadBalancer
  selector:
    app: anishflask01
  ports:
  - port: 8080
    protocol: TCP
